<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>jcs</groupId>
    <artifactId>jcs</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>JCS</name>
    <url>https://github.com/fransjacobs/model-railway</url>
    <description>Java Central Station</description>
    <inceptionYear>2018</inceptionYear>
    <developers>
        <developer>
            <name>Frans Jacobs</name>
            <email>frans.jacobs@gmail.com</email>
        </developer>
    </developers>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <java.version>21</java.version>
        <packaging>jar</packaging>
        <exec.mainClass>jcs.JCS</exec.mainClass>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-api</artifactId>
            <version>2.7.0</version>
        </dependency>
        <dependency>
            <groupId>org.tinylog</groupId>
            <artifactId>tinylog-impl</artifactId>
            <version>2.7.0</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.2.222</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.beryx</groupId>
            <artifactId>awt-color-factory</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-nop</artifactId>
            <version>2.0.12</version>
        </dependency>
        <dependency>
            <groupId>com.dieselpoint</groupId>
            <artifactId>norm</artifactId>
            <version>1.0.6</version>
        </dependency>
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>
        <dependency>
            <groupId>com.twelvemonkeys.imageio</groupId>
            <artifactId>imageio-batik</artifactId>
            <version>3.9.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik</artifactId>
            <version>1.17</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlgraphics</groupId>
            <artifactId>batik-transcoder</artifactId>
            <version>1.17</version>
        </dependency>
        <dependency>
            <groupId>com.thizzer.jtouchbar</groupId>
            <artifactId>jtouchbar</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <version>5.10.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.24.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>2.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.2.5</version>
        </dependency>
        <dependency>
            <groupId>org.httprpc</groupId>
            <artifactId>sierra</artifactId>
            <version>2.0.5</version>
        </dependency>     
        <dependency>
            <groupId>eu.hansolo</groupId>
            <artifactId>SteelSeries</artifactId>
            <version>3.9.30</version>
        </dependency>
        <dependency>
            <groupId>org.imgscalr</groupId>
            <artifactId>imgscalr-lib</artifactId>
            <version>4.2</version>
        </dependency> 
        <dependency>
            <groupId>com.fazecast</groupId>
            <artifactId>jSerialComm</artifactId>
            <version>2.10.4</version>
        </dependency>
        <dependency>
            <groupId>org.netbeans.external</groupId>
            <artifactId>AbsoluteLayout</artifactId>
            <version>RELEASE190</version>
        </dependency>
    </dependencies>
    <build>        
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${project.build.directory}/libs
                            </outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <resources>
                        <resource>
                            <directory>src/main/resources</directory>
                            <filtering>true</filtering>
                            <excludes>
                                <exclude>tinylog-dev.properties</exclude>
                            </excludes>
                        </resource>
                        <resource>
                            <directory>src/test/resources</directory>
                            <filtering>false</filtering>
                        </resource>
                    </resources> 
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>server</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <archive>
                                <manifest>
                                    <addClasspath>true</addClasspath>
                                    <mainClass>
                                        jcs.JCS
                                    </mainClass>
                                </manifest>
                            </archive>
                            <descriptorRefs>
                                <descriptorRef>jar-with-dependencies</descriptorRef>
                            </descriptorRefs>
                            <appendAssemblyId>true</appendAssemblyId>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>-Dfile.encoding=UTF-8</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <skipIfEmpty>true</skipIfEmpty>
                    <archive>
                        <manifestEntries>
                            <Main-Class>${exec.mainClass}</Main-Class>
                            <Automatic-Module-Name>jcs</Automatic-Module-Name>
                            <Program-Version>${project.version}</Program-Version>
                            <Implementation-Version>${project.version}</Implementation-Version>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.7.5</version>
                <configuration>
                    <mainClass>${exec.mainClass}</mainClass>
                    <bundleJre>false</bundleJre>
                    <customizedJre>false</customizedJre>
                    <generateInstaller>true</generateInstaller>
                    <administratorRequired>false</administratorRequired>
                    <copyDependencies>true</copyDependencies>
                    <displayName>JCS</displayName>
                    <organizationName>Frans's Train Projects</organizationName>
                    <vmArgs>-Dtinylog.writer.level=trace -Xms256m -Xmx1024m --add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED -Dsun.java2d.metal=true</vmArgs> 
                    <additionalResources>
                        <additionalResource>${project.basedir}/README.md</additionalResource>
                        <!--
                        <additionalResource>${project.basedir}/DESIGN.md</additionalResource>
                        <additionalResource>${project.basedir}/BUILDING.md</additionalResource>
                        <additionalResource>${project.basedir}/INTERFACES.md</additionalResource>
                        <additionalResource>assets/JCS.l4j.ini</additionalResource>
                        -->
                    </additionalResources>
                </configuration>
                <executions>
                    <execution>
                        <id>auto</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <assetsDir>${project.basedir}/assets</assetsDir>
                            <platform>auto</platform>
                            <createZipball>true</createZipball>
                            <createTarball>false</createTarball>
                            <winConfig>
                                <headerType>gui</headerType>
                                <generateMsi>false</generateMsi>
                                <generateMsm>false</generateMsm>
                                <generateSetup>false</generateSetup>
                                <wrapJar>false</wrapJar>
                                <companyName>${organizationName}</companyName>
                                <productVersion>1.0.0.0</productVersion>
                                <txtProductVersion>${project.version}</txtProductVersion>
                                <copyright>${organizationName}</copyright>
                                <productName>${project.name}</productName>
                                <internalName>${project.name}</internalName>
                                <originalFilename>${project.name}.exe</originalFilename>
                                <exeCreationTool>launch4j</exeCreationTool>
                            </winConfig>
                            <macConfig>
                                <appId>${exec.mainClass}</appId>
                                <icnsFile>target/classes/media/jcs.icns</icnsFile>
                                <generateDmg>false</generateDmg>
                                <generatePkg>false</generatePkg>
                                <volumeName>JCS</volumeName>
                                <entitlements>entitlements.plist</entitlements>
                                <macStartup>SCRIPT</macStartup>
                                <codesignApp>true</codesignApp>
                                <hardenedCodesign>true</hardenedCodesign>
                                <notarizeApp>false</notarizeApp>
                            </macConfig>
                            <linuxConfig>
                                <generateAppImage>false</generateAppImage>
                                <generateDeb>true</generateDeb>
                                <generateRpm>true</generateRpm>
                                <wrapJar>true</wrapJar>
                                <categories>
                                    <category>Education</category>
                                </categories>
                            </linuxConfig>
                        </configuration>
                    </execution>
                </executions>
            </plugin>         
        </plugins>
    </build>
</project>
